services.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp
spec:
  #defines which pods are going to be represented by this service
  #the service becomes a network endpoint for other services
  #or maybe external users to connect (eg browser)
  selector:
    app: webapp

  ports:
    - name: http
      port: 80
      nodePort: 30080

  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-queue
spec:
  #defines which pods are going to be represented by this service
  #the service becomes a network endpoint for other services
  #or maybe external users to connect (eg browser)
  selector:
    app: queue

  ports:
    - name: http
      port: 8161

    - name: endpoint
      port: 61616

  type: ClusterIP


---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-position-tracker
spec:
  #defines which pods are going to be represented by this service
  #the service becomes a network endpoint for other services
  #or maybe external users to connect (eg browser)
  selector:
    app: position-tracker

  ports:
    - name: http
      port: 8080


  type: ClusterIP


---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-api-gateway
spec:
  #defines which pods are going to be represented by this service
  #the service becomes a network endpoint for other services
  #or maybe external users to connect (eg browser)
  selector:
    app: api-gateway

  ports:
    - name: http
      port: 8080
      nodePort: 30020


  type: NodePort
