ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-routing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
spec:
  rules:
    - host: fleetman.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fleetman-webapp
                port:
                  number: 80
